charts/all/routingtests/templates/standard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: standard
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: standard
  sessionAffinity: None
  type: ClusterIP
