charts/all/routingtests/templates/standard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: defacto-standards
spec:
  port:
    targetPort: 8888
  to:
    kind: Service
    name: standard
    weight: 100
  wildcardPolicy: None
